fixed an issue with jumping sections

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,9 +35,21 @@ h1 {
 .content-container-half {
   position: relative;
   display: inline-block;
-  width: 50%;
+  width: 49%;
   /*padding: 1%;*/
 }
+
+.content-container-four {
+  width: 49%;
+  display: inline-block;
+  height: 200px;
+  /*margin-top: 100px;*/
+}
+.content-text-four {
+  font-size: 1rem;
+  margin-bottom: 15px;
+}
+
 
 .title-name-wrapper {
   width: 100%;
@@ -59,18 +71,22 @@ h1 {
 /*Terminal CSS*/
 
 .terminal {
+  margin-top: 7%;
   min-width: 60%;
   max-width: 80%;
+  margin-bottom: 100px;
+  margin-left: 15%;
   /*position: fixed;*/
 }
 
 .terminal-top {
   position: relative;
-  height: 50px;
+  height: 40px;
   width: 100%;
   margin: 0;
-  background-color: grey;
+  background-color: #B3B2B2;
   display: block;
+  border-radius: 5px 5px 0px 0px;
 }
 
 .terminal-core {
@@ -79,15 +95,28 @@ h1 {
   margin: 0;
   height: 400px;
   background-color: black;
+  padding-top: 20px;
 }
 
 .terminal-text {
   margin: 0;
   font-size: 1rem;
+  /*margin-left: 40px;*/
+  display: inline-block;
+  width: 90%;
+  float: right;
+  margin-right: 10px;
 }
 
 .terminal-dots {
-  width: 100px;
+  width: 120px;
+}
+
+.terminal-entry {
+  height: 100px;
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .column {
